react-app/src/components/Reviews/reviewstyles.css
.review-form-container {
  background-image: linear-gradient(to bottom right,#2d3d4b, #566573 );
  color: #aeb8c0;
  max-width: 580px;
  /* min-width: 580px; */
  position: relative;
  overflow: visible;
  padding-top: 16px;
}

.review-form-container > h4 {
  color: #5abaf4;
  padding-left: 10px;
}

.review-form-container > p {
  font-size: 15px;
  margin-bottom: 15px;
  line-height: 17px;
  padding-left: 10px;
}

.review-content-container {
  overflow: hidden;
  display: flex;
  flex-direction: row;
}

#profile_img {
  width: 90px;
  height: 90px;
  margin-right: 20px;
  margin-left: 10px;
  border: 1px solid #67707B;
}

.review-form-container .create_textbox {
  border: 1px solid #233c51;
  border-radius: 3px;
  height: 132px;
  /* width: 764px; */
  max-width: 800px;
  background-color: #222b35;
  color: #d6d7d8;
  padding: 10px 11px;
  font-size: 13px;
  font-family: "Motiva Sans", Sans-serif;
  font-weight: normal;
}

.review_controls_body {
  padding-bottom: 25px;
  margin: 0;
}

.review_controls_container {
  padding: 8px;
  margin-bottom: 10px;
  max-width: 772px;
  background-image: linear-gradient(to bottom right,#343e48, #424d58 );
}

.vote_up_down_container {
  padding: 4px 100px 0px 0px;
}

.recommend_yes, .recommend_no {
  border-radius: 2px;
  border: none;
  padding: 1px;
  margin: 2px;
  display: inline-block;
  cursor: pointer;
  text-decoration: none !important;
  color: #67c1f5 !important;
  background: rgba( 103, 193, 245, 0.2 );
}

.recommend_yes:hover {
  background-color: #5893B7;
  color: #fff !important;
}

.recommend_no:hover {
  background-color: #5893B7;
  color: #fff !important;
}

.recommend_clicked{
  text-decoration: none !important;
  color: #fff !important;
  background: rgba( 103, 193, 245, 0.6 );
  border-radius: 2px;
  border: none;
  padding: 1px;
  margin: 2px;
}

.recommend_clicked > span {
  padding: 0 15px;
  font-size: 15px;
  line-height: 30px;
}

.recommend_yes > span {
  padding: 0 15px;
  font-size: 15px;
  line-height: 30px;
}


.recommend_no > span {
  padding: 0 15px;
  font-size: 15px;
  line-height: 30px;
}

.ico18 {
  display: inline-block;
  width: 18px;
  height: 18px;
  margin: 0 0px;
  color: #fff !important;
  background: url(https://store.cloudflare.steamstatic.com/public/shared/images/buttons/icons_18.png?v=1);
}
.ico18:hover {
  color: #fff !important;
}

.btn-submit-review {
  padding: 1px;
  cursor: pointer;
  display: block;
  float: right;
  text-decoration: none !important;
  color: #2B5066 !important;
  background: linear-gradient( to bottom, rgba(193,228,249,1) 5%, rgba(148,183,202,1) 95%);
  border-radius: 4px;
  border: 3px solid #17202f;
}

.btn-submit-review:hover {
  background: linear-gradient( to bottom, rgba(193,228,249,1) 2%,  #3a94c7 95%);
  color: #fff !important;
}

.btn-submit-review > span {
  padding: 0 5px;
  font-size: 15px;
  line-height: 30px;
  display: block;
  background: transparent;
  text-shadow: 1px 1px 0px rgba( 255, 255, 255, 0.1 );
}

.review-summary-container {
  background-image: linear-gradient(to bottom right,#2d3d4b, #566573 );
  color: #aeb8c0;
  min-width: 906px;
  position: relative;
  overflow: visible;
  padding-top: 16px;
  padding: 0px 16px 16px 16px;
  margin: 0px auto;
  margin-bottom: 40px;
  max-width: 1008px;
}

.review-link-bttn {
  border-radius: 2px;
  border: none;
  padding: 1px;
  display: inline-block;
  cursor: pointer;
  text-decoration: none;
  color: #67c1f5 !important;
  background: rgba( 103, 193, 245, 0.2 );
}

.review-link-bttn:hover {
  color: #fff !important;
  background: linear-gradient( -60deg, #417a9b 5%,#67c1f5 95%);
}

.review-link-bttn > span {
  padding: 0 15px;
  font-size: 12px;
  line-height: 20px;
}

.review-summary-title {
  font-size: 18px;
  font-weight: normal;
  margin-bottom: 13px;
  color: #66c0f4;
  font-family: "Motiva Sans", Sans-serif;
  font-weight: 300;
  width: 100%;
  border-top: 1px solid #212c3d;
  padding-top: 10px;
}


.review-success-description {
  display: inline-flex;
  font-size: 14px;
  margin: 16px 16px 8px 0px;
  padding: 5px;
  text-decoration: none;
}

.thumb {
  margin-top: 10px;
}
.review-success-description > p {
  padding: 10px;
}

.review-box {
  display: flex;
  flex-direction: row;
  width: 600px;
  margin-bottom: 20px;
  height: fit-content;
  background-color: #14212c;
  position: relative;
  text-decoration: none;
}

.review-box::before {
  content: "";
  background: linear-gradient(to right, #47bfff 30%, rgba(255,255,255,0) 70%);
  display: block;
  height: 1px;
  width: 600px;
  position: absolute;
  top: 0;
}

.review-header {
  display: inline-flex;
  align-items: flex-start;
}

.review-list-container {
  display: flex;
  align-items: flex-start;
}

.profile_box {
  display: inline-flex;
}

.profile-pic-box {
  display: flex;
  flex: column;
}

.review_content_box {
  padding-left: 15px;
}

.review-recommendation {
  display: flex;
  flex-direction: row;
  height: 54px;
  background-color: #0e171e;
  width: 385px;
}

.review-content {
  margin: 20px 0;
  margin-right: 10px;
  font-size: 0.8rem;
  color: #DCDEDF;
  line-height: 1.3;
}

